<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <ImageView
  android:id="@+id/header"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:src="@drawable/start_header_image"
  android:contentDescription="@null"
  />
  <EditText
  android:id="@+id/edit"
  android:layout_width="200dp"
  android:layout_height="wrap_content"
  android:layout_below="@id/header"
  android:inputType="text"
  android:hint="@string/hint"
  android:layout_marginLeft="10dp"
  android:singleLine="true"
  />
  <Button
  android:id="@+id/button_ok"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_below="@id/header"
  android:layout_toRightOf="@id/edit"
  android:gravity="center"
  android:text="@string/ok"
  android:drawableLeft="@drawable/icon_search"
  android:layout_alignBottom="@id/edit"
  />
  <ImageView
  android:id="@+id/image"
  android:layout_below="@id/edit"
  android:layout_height="wrap_content"
  android:layout_width="match_parent"
  android:src="@drawable/back"
  android:layout_centerHorizontal="true"
  android:contentDescription="@null"
  />
  <TextView 
      android:id="@+id/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/image"
      android:text="@string/text_introduce"
      android:textColor="@color/blue"
      android:textSize="20sp"
      />
 
  <Button
      android:id="@+id/button_search"
      android:layout_below="@id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:gravity="center"
      android:layout_marginLeft="10dp"
      android:text="@string/button_search"
      android:textColor="@color/black"
      android:background="@drawable/btn_selector"
      android:drawableLeft="@drawable/icon_photoes"
      />
    <Button
      android:id="@+id/button_tips"
      android:layout_below="@id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:gravity="center"
      android:layout_marginLeft="10dp"
      android:layout_toRightOf="@id/button_search"
      android:text="@string/button_tips"
      android:textColor="@color/black"
      android:background="@drawable/btn_selector"
      android:drawableLeft="@drawable/icon_catogory"
      />
</RelativeLayout>