<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/start_header_image"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="46sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:lineSpacingExtra="2dp"
        android:layout_marginTop="@dimen/start_title_top"/>

    <Button
        android:id="@+id/start_game"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@drawable/icon_blue_btn"
        android:textSize="22sp"
        android:text="@string/button_start"
        android:layout_marginTop="@dimen/start_button_top"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/start_answer"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@drawable/icon_blue_btn"
        android:textSize="22sp"
        android:text="@string/button_answer"
        android:layout_marginTop="@dimen/start_button_bottom"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/start_image"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@drawable/icon_blue_btn"
        android:textSize="22sp"
        android:text="@string/button_image"
        android:layout_marginTop="@dimen/start_button_bottom"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/start_data"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@drawable/icon_blue_btn"
        android:textSize="22sp"
        android:text="@string/button_knowledage"
        android:layout_marginTop="@dimen/start_button_bottom"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:gravity="center"/>


</LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-9957708930248817/9296369008">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
